# serializer version: 1
# name: test_save_breeder_logo_success
  'breeder_test_breeder.webp'
# ---
# name: test_save_strain_image_success
  'strain_123.webp'
# ---
# name: test_save_strain_image_with_phenotype
  'strain_123_pheno_456.webp'
# ---
# name: test_save_timeline_image_success
  'plant_123_20260112_120000_f829b914.webp'
# ---
